--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td>  <img src="/Users/tiago/Desktop/Web development /HTML - Personal Site/HTML - Personal Site/images/tiagorodrigues.png" alt="profil tiago rodrigues">
+      <td>  <img src="tiagorodrigues.png">
 </td>
       <td>  <h1><strong>Tiago H Rodrigues</h1></strong>
 
