--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
 
   </table cellspacing="10">
 <hr>
-<strong>Fahrigkeit</strong>
+<strong>Interessen</strong>
   <table>
     <th></th>
     <tbody>
       <tr>
-        <td>Computer Grundkurs</td>
+        <td>Programmierung</td>
         <td>🌟🌟🌟🌟🌟</td>
-        <td>Mathematic </td>
+        <td>Mathematik </td>
         <td>🌟🌟🌟🌟🌟</td>
       </tr>
       <tr>
-      <td>Web Development </td>
+      <td>Autos</td>
       <td>🌟🌟🌟🌟</td>
       <td>IT</td>
       <td>🌟🌟🌟🌟🌟</td>
