--- a/Bildung.html
+++ b/Bildung.html
@@ -7,7 +7,7 @@
 
     <body>
 
-      <img src="/Users/tiago/Desktop/Web development /HTML - Personal Site/HTML - Personal Site/images/tiagorodrigues.png" alt="profil tiago rodrigues">
+      <img src="tiagorodrigues.png">
     <h1> Tiago H Rodrigues</h1>
 
     <h3>Bildung</h3>
