--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1><strong>Tiago H Rodrigues</h1></strong>
-    <img src="/Users/tiago/Desktop/Web development /HTML - Personal Site/HTML - Personal Site/images/tiagorodrigues.png" alt="profil tiago rodrigues">
+    <img src="tiagorodrigues.png">
 
 
     <<h2>My hobbies</h2>
