--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <hr>
   <a href="Bildung.html">Bildung</a>
-  <a href="Hobbies.html">Hobbies</a>
+  <a href=hobbies.html">Hobbies</a>
   <a href="Kontakt.html">Kontakt</a>
 
 </html>
