--- a/hobbies.html
+++ b/hobbies.html
@@ -37,6 +37,14 @@
       </ol>
     </ul>
 
+  <ul>
+      <li>K</li>
+      <ol>
+        <li>Vino</li>
+        <li>Kochen</li>
+      </ol>
+    </ul>
+  
 
   </body>
 </html>
